# CrescentEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CrescentEngine/: CMakeLists.txt  main.cpp
CrescentEngine/engine/: CustomMath.h
CrescentEngine/engine/core/: Vertex.h
CrescentEngine/engine/core/Camera/: Camera.cpp  Camera.h  FreeFlyCamera.cpp  FreeFlyCamera.h
CrescentEngine/engine/core/Lighting/: DirectionalLight.cpp  DirectionalLight.h
CrescentEngine/engine/core/Log/: Log.cpp  Log.h
CrescentEngine/engine/core/Model/: Model.cpp  Model.h
CrescentEngine/engine/core/Resource/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
CrescentEngine/engine/core/Resource/Texture/: Texture.h  (+5 more)
CrescentEngine/engine/core/Scene/: SceneObject.cpp  SceneObject.h
CrescentEngine/engine/core/Shader/: ShaderManager.cpp  ShaderManager.h
CrescentEngine/engine/core/Timer/: Timer.cpp  Timer.h
CrescentEngine/engine/input/: GLFWInputManager.cpp  GLFWInputManager.h  Input.h  InputCode.h
CrescentEngine/renderer/: IRenderer.cpp  IRenderer.h  IWindow.cpp  IWindow.h  RenderingEngine.cpp  RenderingEngine.h
CrescentEngine/renderer/opengl/: Mesh.cpp  Mesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLWindow.cpp  OpenGLWindow.h  ShaderProgram.cpp  ShaderProgram.h  ShadowMap.cpp  ShadowMap.h
CrescentEngine/shaders/: fragmentshader.fs  fragmentshader.glsl  vertexshader.vs
CrescentEngine/shaders/Shadow/: shadowVertex.glsl
gamefiles/shaders/: vertexshader.glsl
gamefiles/shaders/Lighting/: lightingFragment.glsl
gamefiles/shaders/Shadow/: shadowFragment.glsl
(+4 files in other folders)
